[package]
name = "gt7_server"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/Souldiv/gt7-telemetry-server"
license = "MIT"
description = "A server for GT7 telemetry data processing."

[dependencies]
byteorder = "1.5.0"
salsa20 = "0.10.2"
serde_json = "1.0.132"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "net", "macros", "rt-multi-thread", "time", "sync"] }
warp = "0.3.7"
futures = "0.3.31"
tokio-stream = { version = "0.1.10", features = ["sync"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Which actions to run on pull requests
pr_run_mode = "plan"
